--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,26 @@
           </a>
         </li>
         <li class="nav-item">
-         
+          <a class="nav-link" href="{{ path('app_user_index') }}">coach</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Private coaching </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_planning_index') }}">Planning</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_membership_index') }}">Membership</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Membership type</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_activity_index') }}">Activity</a>
+        </li>
+        
+        
+        
       </div>
       </div>
       </nav>
