--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -9,7 +9,8 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>ClientName</th>
+                <th>Client Name</th>
+                <th>Client mail</th>
                 <th>Phone</th>
                 <th>Birthday</th>
                 <th>actions</th>
@@ -19,12 +20,14 @@
         {% for client in clients %}
             <tr>
                 <td>{{ client.id }}</td>
+                <td>{{ client.mail }}</td>
                 <td>{{ client.ClientName }}</td>
                 <td>{{ client.phone }}</td>
                 <td>{{ client.birthday ? client.birthday|date('Y-m-d') : '' }}</td>
                 <td>
                     <a href="{{ path('app_client_show', {'id': client.id}) }}">show</a>
                     <a href="{{ path('app_client_edit', {'id': client.id}) }}">edit</a>
+                    <a href="{{ path('app_client_delete', {'id': client.id}) }}">delete</a>
                 </td>
             </tr>
         {% else %}
