--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -11,7 +11,6 @@
                 <th>Id</th>
                 <th>Email</th>
                 <th>Roles</th>
-                <th>Password</th>
                 <th>UserName</th>
                 <th>Phone</th>
                 <th>ModifiedAt</th>
@@ -26,7 +25,6 @@
                 <td>{{ user.id }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
                 <td>{{ user.UserName }}</td>
                 <td>{{ user.phone }}</td>
                 <td>{{ user.ModifiedAt ? user.ModifiedAt|date('Y-m-d H:i:s') : '' }}</td>
@@ -35,6 +33,7 @@
                 <td>
                     <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
                     <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+                     <a href="{{ path('app_user_delete', {'id': user.id}) }}">delete</a>
                 </td>
             </tr>
         {% else %}
