--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -3,7 +3,17 @@
 {% block title %}Client index{% endblock %}
 
 {% block body %}
-    <h1>Client index</h1>
+    <style>
+    .example-wrapper { text-align:center  sans-serif; }
+   
+</style>
+
+<div class="example-wrapper">
+    <h1>  Our Clients </h1>
+
+    
+</div>
+    
 
     <table class="table">
         <thead>
