--- a/templates/activity/index.html.twig
+++ b/templates/activity/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Activity index{% endblock %}
 
 {% block body %}
-    <h1>Activity index</h1>
+    <h1>Activities </h1>
 
     <table class="table">
         <thead>
