--- a/templates/membership/index.html.twig
+++ b/templates/membership/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Membership index{% endblock %}
 
 {% block body %}
-    <h1>Membership index</h1>
+    <h1>Memberships </h1>
 
     <table class="table">
         <thead>
