--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,12 +24,12 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="{{ path('app_client_index') }}">client
+          <a class="nav-link active" href="{{ path('app_client_index') }}">Client
            
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_user_index') }}">coach</a>
+          <a class="nav-link" href="{{ path('app_user_index') }}">Users and Coach</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="">Private coaching </a>
@@ -46,7 +46,13 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ path('app_activity_index') }}">Activity</a>
         </li>
-        
+        <div class="navbar-collapse collapse">
+          <ul class="navbar-nav">
+           <li class="nav-item">
+               <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+          </li>
+        </div>  
+     </ul>
         
         
       </div>
