--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -35,9 +35,9 @@
                 <td>{{ client.phone }}</td>
                 <td>{{ client.birthday ? client.birthday|date('Y-m-d') : '' }}</td>
                 <td>
-                    <a href="{{ path('app_client_show', {'id': client.id}) }}">show</a>
-                    <a href="{{ path('app_client_edit', {'id': client.id}) }}">edit</a>
-                    <a href="{{ path('app_client_delete', {'id': client.id}) }}">delete</a>
+                    <a href="{{ path('app_client_show', {'id': client.id}) }}" button type="button" class="btn btn-primary">show</a>
+                    <a href="{{ path('app_client_edit', {'id': client.id}) }}" button type="button" class="btn btn-success">edit</a>
+                    <a href="{{ path('app_client_delete', {'id': client.id}) }}"button type="button" class="btn btn-danger"> delete</a>
                 </td>
             </tr>
         {% else %}
@@ -48,5 +48,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_client_new') }}">Create new</a>
+    <a href="{{ path('app_client_new') }}" button type="button" class="btn btn-primary btn-lg">Create new</a>
 {% endblock %}
