--- a/templates/client/show.html.twig
+++ b/templates/client/show.html.twig
@@ -26,9 +26,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_client_index') }}">back to list</a>
+    <a href="{{ path('app_client_index') }}" button type="button" class="btn btn-primary btn-lg">back to list</a> 
 
-    <a href="{{ path('app_client_edit', {'id': client.id}) }}">edit</a>
+    <a href="{{ path('app_client_edit', {'id': client.id}) }}" button type="button" class="btn btn-success">edit</a> 
 
     {{ include('client/_delete_form.html.twig') }}
 {% endblock %}
