--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Planning index{% endblock %}
 
 {% block body %}
-    <h1>Planning index</h1>
+    <h1>our Planning </h1>
 
     <table class="table">
         <thead>
@@ -27,9 +27,9 @@
                 <td>{{ planning.EndHour }}</td>
                 <td>{{ planning.date ? planning.date|date('Y-m-d') : '' }}</td>
                 <td>
-                    <a href="{{ path('app_planning_show', {'id': planning.id}) }}">show</a>
-                    <a href="{{ path('app_planning_edit', {'id': planning.id}) }}">edit</a>
-                    <a href="{{ path('app_planning_delete', {'id': planning.id}) }}">delete</a>
+                    <a href="{{ path('app_planning_show', {'id': planning.id}) }}" button type="button" class="btn btn-primary">show</a>
+                    <a href="{{ path('app_planning_edit', {'id': planning.id}) }}" button type="button" class="btn btn-success">edit</a>
+                    <a href="{{ path('app_planning_delete', {'id': planning.id}) }}" button type="button" class="btn btn-danger">delete</a>
                 </td>
             </tr>
         {% else %}
@@ -40,5 +40,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_planning_new') }}">Create new</a>
+    <a href="{{ path('app_planning_new') }}" button type="button" class="btn btn-primary btn-lg">Create new</a>
 {% endblock %}
