--- a/templates/planning/new.html.twig
+++ b/templates/planning/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('planning/_form.html.twig') }}
 
-    <a href="{{ path('app_planning_index') }}">back to list</a>
+    <a href="{{ path('app_planning_index') }}" button type="button" class="btn btn-primary btn-lg">back to list</a>
 {% endblock %}
