--- a/templates/type/new.html.twig
+++ b/templates/type/new.html.twig
@@ -4,8 +4,15 @@
 
 {% block body %}
     <h1>Create new Membership Type</h1>
+    <div class="row">
+        <div class="col-12">
+           <p align="right">
+               <a href="{{ path('app_type_index') }}" class="btn btn-info">back to list</a>
+           </p>
+        </div>
+    </div>
 
     {{ include('type/_form.html.twig') }}
 
-    <a href="{{ path('app_type_index') }}">back to list</a>
+
 {% endblock %}
