--- a/templates/activity/index.html.twig
+++ b/templates/activity/index.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
     <h1>Activities </h1>
+     <div class="row">
+        <div class="col-12">
+            <p align="right">
+                <a href="{{ path('app_activity_new') }}" class="btn btn-outline-success">Create new</a>
+            </p>
+        </div>
+
 
     <table class="table">
         <thead>
@@ -21,8 +28,9 @@
                 <td>{{ activity.ActivityName }}</td>
                 <td>{{ activity.description }}</td>
                 <td>
-                    <a href="{{ path('app_activity_show', {'id': activity.id}) }}">show</a>
-                    <a href="{{ path('app_activity_edit', {'id': activity.id}) }}">edit</a>
+                    <th><a href="{{ path('app_activity_show', {'id': activity.id}) }}" button type="button" class="btn btn-primary">show</a></th>
+                    <th><a href="{{ path('app_activity_edit', {'id': activity.id}) }}" button type="button" class="btn btn-success">edit</a></th>
+                    
                 </td>
             </tr>
         {% else %}
@@ -32,6 +40,4 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_activity_new') }}">Create new</a>
 {% endblock %}
