--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -4,11 +4,14 @@
 
 {% block body %}
 
-<div class="example-wrapper">
     <h1>  Our Clients </h1>
+     <div class="row">
+        <div class="col-12">
+            <p align="right">
+                <a href="{{ path('app_client_new') }}" class="btn btn-outline-success">Create new</a>
+            </p>
+        </div>
 
-    
-</div>
     
 
     <table class="table">
@@ -44,5 +47,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_client_new') }}" button type="button" class="btn btn-primary btn-lg">Create new</a>
+    
 {% endblock %}
