--- a/templates/planning/show.html.twig
+++ b/templates/planning/show.html.twig
@@ -4,6 +4,12 @@
 
 {% block body %}
     <h1>Planning</h1>
+     <div class="row">
+        <div class="col-12">
+            <p align="right">
+            <a href="{{ path('app_planning_index') }}"  class="btn btn-outline-success">back to list</a>
+            </p>
+        </div> 
 
     <table class="table">
         <tbody>
@@ -30,9 +36,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_planning_index') }}">back to list</a>
+    
 
-    <a href="{{ path('app_planning_edit', {'id': planning.id}) }}">edit</a>
+    <a href="{{ path('app_planning_edit', {'id': planning.id}) }}" button type="button" class="btn btn-success" >edit</a>
 
     {{ include('planning/_delete_form.html.twig') }}
 {% endblock %}
