--- a/templates/activity/edit.html.twig
+++ b/templates/activity/edit.html.twig
@@ -4,10 +4,16 @@
 
 {% block body %}
     <h1>Edit Activity</h1>
+    <div class="row">
+        <div class="col-12">
+            <p align="right">
+            <a href="{{ path('app_activity_index') }}"  class="btn btn-outline-success">back to list</a>
+            </p>
+        </div>  
 
     {{ include('activity/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_activity_index') }}">back to list</a>
+    
 
     {{ include('activity/_delete_form.html.twig') }}
 {% endblock %}
