--- a/templates/activity/new.html.twig
+++ b/templates/activity/new.html.twig
@@ -4,8 +4,14 @@
 
 {% block body %}
     <h1>Create new Activity</h1>
+    <div class="row">
+        <div class="col-12">
+            <p align="right">
+            <a href="{{ path('app_activity_index') }}"  class="btn btn-outline-success">back to list</a>
+            </p>
+        </div>  
 
     {{ include('activity/_form.html.twig') }}
 
-    <a href="{{ path('app_activity_index') }}">back to list</a>
+    
 {% endblock %}
