--- a/templates/activity/show.html.twig
+++ b/templates/activity/show.html.twig
@@ -4,6 +4,13 @@
 
 {% block body %}
     <h1>Activity</h1>
+    <div class="row">
+        <div class="col-12">
+            <p align="right">
+            <a href="{{ path('app_activity_index') }}"  class="btn btn-outline-success">back to list</a>
+            </p>
+        </div>    
+
 
     <table class="table">
         <tbody>
@@ -22,9 +29,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_activity_index') }}">back to list</a>
+    
 
-    <a href="{{ path('app_activity_edit', {'id': activity.id}) }}">edit</a>
+    <a href="{{ path('app_activity_edit', {'id': activity.id}) }}" class="btn btn-success">edit</a>
 
     {{ include('activity/_delete_form.html.twig') }}
 {% endblock %}
