--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,7 @@
           <a class="nav-link" href="{{ path('app_user_index') }}">Users and Coach</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Private coaching </a>
+          <a class="nav-link" href="{{ path('app_private_coaching_index') }}">Private coaching </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ path('app_planning_index') }}">Planning</a>
@@ -48,8 +48,9 @@
         </li>
         <div class="navbar-collapse collapse">
           <ul class="navbar-nav">
-           <li class="nav-item">
-               <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+               
           </li>
         </div>  
      </ul>
@@ -58,8 +59,7 @@
       </div>
       </div>
       </nav>
-
-            <div class="container-fluid">
+      <div class="container-fluid">
                 {% for type in ['danger', 'info', 'success'] %}
                     {% for flash_message in app.session.flashBag.get(type) %}
                         <div class="alert alert-{{ type }}" role="alert">
@@ -69,6 +69,6 @@
                 {% endfor %}
                 {% block body %}
                 {% endblock %}
-            </div>
+      </div>
     </body>
 </html>
