--- a/templates/client/edit.html.twig
+++ b/templates/client/edit.html.twig
@@ -4,10 +4,14 @@
 
 {% block body %}
     <h1>Edit Client</h1>
+    <div class="col-12">
+            <p align="right">
+                <a href="{{ path('app_client_new') }}" class="btn btn-outline-success">back to list</a>
+            </p>
+        </div>
 
     {{ include('client/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_client_index') }}">back to list</a>
 
     {{ include('client/_delete_form.html.twig') }}
 {% endblock %}
