--- a/templates/client/new.html.twig
+++ b/templates/client/new.html.twig
@@ -4,8 +4,13 @@
 
 {% block body %}
     <h1>Create new Client</h1>
+    <div class="row">
+        <div class="col-12">
+            <p align="right">
+            <a href="{{ path('app_client_index') }}"  class="btn btn-outline-success">back to list</a>
+            </p>
+        </div> 
 
     {{ include('client/_form.html.twig') }}<br>
 
-    <a href="{{ path('app_client_index') }}" button type="button" class="btn btn-primary btn-lg">back to list</a>
 {% endblock %}
