--- a/templates/membership/edit.html.twig
+++ b/templates/membership/edit.html.twig
@@ -4,10 +4,14 @@
 
 {% block body %}
     <h1>Edit Membership</h1>
+    <div class="col-12">
+            <p align="right">
+                <a href="{{ path('app_membership_new') }}" class="btn btn-outline-success">back to list</a>
+            </p>
+        </div>
 
     {{ include('membership/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_membership_index') }}">back to list</a>
 
     {{ include('membership/_delete_form.html.twig') }}
 {% endblock %}
