--- a/templates/membership/index.html.twig
+++ b/templates/membership/index.html.twig
@@ -4,6 +4,12 @@
 
 {% block body %}
     <h1>Memberships </h1>
+    <div class="row">
+        <div class="col-12">
+            <p align="right">
+                <a href="{{ path('app_membership_new') }}" class="btn btn-outline-success">Create new</a>
+            </p>
+        </div>
 
     <table class="table">
         <thead>
@@ -23,14 +29,14 @@
             <tr>
                 <td>{{ membership.id }}</td>
                 <td>{{ membership.Client.ClientName }}</td>
-                <td>{{ membership.type.Membershiptype }}</td>
+                <td>{{ membership.type.MembershipType }}</td>
                 <td>{{ membership.DateBegin ? membership.DateBegin|date('Y-m-d') : '' }}</td>
                 <td>{{ membership.EndDate ? membership.EndDate|date('Y-m-d') : '' }}</td>
                 <td>{{ membership.price }}</td>
                 <td>
-                    <a href="{{ path('app_membership_show', {'id': membership.id}) }}">show</a>
-                    <a href="{{ path('app_membership_edit', {'id': membership.id}) }}">edit</a>
-                    <a href="{{ path('app_membership_delete', {'id': membership.id}) }}">delete</a>
+                    <a href="{{ path('app_membership_show', {'id': membership.id}) }}" button type="button" class="btn btn-primary">show</a>
+                    <a href="{{ path('app_membership_edit', {'id': membership.id}) }}"button type="button" class="btn btn-success">edit</a>
+                    <a href="{{ path('app_membership_delete', {'id': membership.id}) }}" button type="button" class="btn btn-danger">delete</a>
                 </td>
             </tr>
         {% else %}
@@ -41,5 +47,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_membership_new') }}">Create new</a>
+    
 {% endblock %}
