--- a/templates/membership/show.html.twig
+++ b/templates/membership/show.html.twig
@@ -4,6 +4,12 @@
 
 {% block body %}
     <h1>Membership</h1>
+    <div class="row">
+        <div class="col-12">
+            <p align="right">
+            <a href="{{ path('app_membership_index') }}"  class="btn btn-outline-success">back to list</a>
+            </p>
+        </div> 
 
     <table class="table">
         <tbody>
@@ -22,9 +28,8 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_membership_index') }}">back to list</a>
 
-    <a href="{{ path('app_membership_edit', {'id': membership.id}) }}">edit</a>
+    <a href="{{ path('app_membership_edit', {'id': membership.id}) }}" button type="button" class="btn btn-success" >edit</a>
 
     {{ include('membership/_delete_form.html.twig') }}
 {% endblock %}
