--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -4,6 +4,12 @@
 
 {% block body %}
     <h1>our Planning </h1>
+     <div class="row">
+        <div class="col-12">
+            <p align="right">
+                <a href="{{ path('app_planning_new') }}" class="btn btn-outline-success">Create new</a>
+            </p>
+        </div>
 
     <table class="table">
         <thead>
@@ -21,7 +27,7 @@
         {% for planning in plannings %}
             <tr>
                 <td>{{ planning.id }}</td>
-                <td>{{ planning.activity }}</td>
+                <td>{{ planning.activity.ActivityName }}</td>
                 <td>{{ planning.roomNumber }}</td>
                 <td>{{ planning.BeginHour }}</td>
                 <td>{{ planning.EndHour }}</td>
@@ -40,5 +46,4 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_planning_new') }}" button type="button" class="btn btn-primary btn-lg">Create new</a>
 {% endblock %}
