--- a/templates/planning/new.html.twig
+++ b/templates/planning/new.html.twig
@@ -4,8 +4,12 @@
 
 {% block body %}
     <h1>Create new Planning</h1>
+    <div class="row">
+        <div class="col-12">
+            <p align="right">
+            <a href="{{ path('app_planning_index') }}"  class="btn btn-outline-success">back to list</a>
+            </p>
+        </div> 
 
     {{ include('planning/_form.html.twig') }}
-
-    <a href="{{ path('app_planning_index') }}" button type="button" class="btn btn-primary btn-lg">back to list</a>
 {% endblock %}
