--- a/templates/type/edit.html.twig
+++ b/templates/type/edit.html.twig
@@ -4,10 +4,14 @@
 
 {% block body %}
     <h1>Edit Membership Type</h1>
+    <div class="col-12">
+            <p align="right">
+                <a href="{{ path('app_type_new') }}" class="btn btn-outline-success">back to list</a>
+            </p>
+        </div>
 
     {{ include('type/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_type_index') }}">back to list</a>
-
+  
     {{ include('type/_delete_form.html.twig') }}
 {% endblock %}
