--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -4,10 +4,13 @@
 
 {% block body %}
     <h1>Edit User</h1>
+    <div class="col-12">
+            <p align="right">
+                <a href="{{ path('app_user_index') }}" class="btn btn-outline-success">back to list</a>
+            </p>
+        </div>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
-
+    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}   
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
