--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -4,6 +4,12 @@
 
 {% block body %}
     <h1>our users and coaches</h1>
+     <div class="row">
+        <div class="col-12">
+            <p align="right">
+                <a href="{{ path('app_user_new') }}" class="btn btn-outline-success">Create new</a>
+            </p>
+        </div>
 
     <table class="table">
         <thead>
@@ -13,9 +19,11 @@
                 <th>Roles</th>
                 <th>UserName</th>
                 <th>Phone</th>
+                <th>speciality</th>
+                <th>salary</th>
                 <th>ModifiedAt</th>
                 <th>CreatedAt</th>
-                <th>Blocked</th>
+                
                 <th>actions</th>
             </tr>
         </thead>
@@ -27,13 +35,14 @@
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                 <td>{{ user.UserName }}</td>
                 <td>{{ user.phone }}</td>
+                <td>{{ user.speciality }}</td>
+                <td>{{ user.salary }}</td>
                 <td>{{ user.ModfiedAt ? user.ModfiedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ user.CreatedAt ? user.CreatedAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ user.Blocked ? 'Yes' : 'No' }}</td>
+                
                 <td>
-                    <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
-                     <a href="{{ path('app_user_delete', {'id': user.id}) }}">delete</a>
+                    <a href="{{ path('app_user_show', {'id': user.id}) }}" button type="button" class="btn btn-primary">show</a>
+                    <a href="{{ path('app_user_edit', {'id': user.id}) }}" button type="button" class="btn btn-success">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -44,5 +53,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_user_new') }}">Create new</a>
+
 {% endblock %}
