--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -4,8 +4,13 @@
 
 {% block body %}
     <h1>Create new User</h1>
+    <div class="col-12">
+            <p align="right">
+                <a href="{{ path('app_user_index') }}" class="btn btn-outline-success">back to list</a>
+            </p>
+        </div>
 
     {{ include('user/_form.html.twig') }}
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+    
 {% endblock %}
