--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -4,6 +4,12 @@
 
 {% block body %}
     <h1>User</h1>
+    <div class="row">
+        <div class="col-12">
+            <p align="right">
+            <a href="{{ path('app_user_index') }}"  class="btn btn-outline-success">back to list</a>
+            </p>
+        </div> 
 
     <table class="table">
         <tbody>
@@ -25,10 +31,9 @@
             </tr>
         </tbody>
     </table>
+  
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
-
-    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+    <a href="{{ path('app_user_edit', {'id': user.id}) }}" button type="button" class="btn btn-success" >edit</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
