--- a/templates/type/_form.html.twig
+++ b/templates/type/_form.html.twig
@@ -10,9 +10,8 @@
         </div>
     </div>
     <div class="row">
-        <di class="col-12">
-            <button class="btn btn-success" type="submit">Save</button>
-            
-        </di>
+        <div class="col-12">
+            <button class="save-btn btn btn-success" type="submit">Save</button>
+        </div>
     </div>
 {{ form_end(form) }}
