--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,74 +1,154 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css">
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		<link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css">
+		<style>
+			th,
+			tr,
+			td,
+			table,
+			thead {
+				border: 1px solid #ccc;
+			}
+			thead,
+			thead th {
+				border-top: 2px solid #000;
+				background-color: #3e4e5e;
+				color: white;
+				text-transform: capitalize;
+				text-align: center;
+			}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{{ path('app_home') }}">MyGym</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+			.index-table tbody td:last-child {
+				display: flex;
+				border: none;
+			}
+			.index-table tbody td:last-child a {
+				margin: 0 2px;
+				flex-grow: 1;
+			}
+			h1 {
+				text-align: center;
+				padding-top: 15px;
+				color: #2c3e50;
+			}
+			.show-table {
+				margin: auto auto 15px;
+				text-align: center;
+			}
+			.show-table tr:nth-child(2n + 1) {
+				background-color: #eee;
+				color: #000000;
+			}
+			.show-table th {
+				width: 50%
+			}
+			.edit-btn-show {
+				display: inline-block;
+				width: 150px
+			}
+			.deleteForm {
+				display: inline-block;
+			}
+			.deleteForm button {
+				width: 150px
+			}
+			.show-Container {
+				width: 90%;
+				margin: auto;
+			}
+			.descTD {
+				width: 60%
+			}
+			.edit-Container .deleteForm button {
+				margin-top: -65px;
+				margin-left: 80px;
+			}
+			.edit-Container {
+				width: 90%;
+				margin: auto;
+			}
+			.save-btn {
+				width: 75px
+			}
+			.navbar-collapse{
+				position:relative;
+			}
+			.navbar-collapse li:last-child{
+				position:absolute;
+				right:15px
+			}
+			.index-table tr{
+				transition: 0.4s;
+			}
+			.index-table tr:hover{
+				background:#3e4e5e11
+			}
+		</style>
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
 
-    <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="{{ path('app_client_index') }}">Client
-           
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_user_index') }}">Users and Coach</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_private_coaching_index') }}">Private coaching </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_planning_index') }}">Planning</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_membership_index') }}">Membership</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_type_index') }}">Membership type</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_activity_index') }}">Activity</a>
-        </li>
-        <div class="navbar-collapse collapse">
-          <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
-               
-          </li>
-        </div>  
-     </ul>
-        
-        
-      </div>
-      </div>
-      </nav>
-      <div class="container-fluid">
-                {% for type in ['danger', 'info', 'success'] %}
-                    {% for flash_message in app.session.flashBag.get(type) %}
-                        <div class="alert alert-{{ type }}" role="alert">
-                            {{ flash_message }}
-                        </div>
-                    {% endfor %}
-                {% endfor %}
-                {% block body %}
-                {% endblock %}
-      </div>
-    </body>
+		{% endblock %}
+
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="{{ path('app_home') }}">MyGym</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+
+				<div class="collapse navbar-collapse" id="navbarColor01">
+					<ul class="navbar-nav me-auto">
+						<li class="nav-item">
+							<a class="nav-link active" href="{{ path('app_client_index') }}">Client
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_user_index') }}">Users and Coaches</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_private_coaching_index') }}">Private coaching
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_planning_index') }}">Planning</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_membership_index') }}">Membership</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_type_index') }}">Membership type</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_activity_index') }}">Activity</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+						</li>
+					</div>
+				</div>
+			</nav>
+			<div class="container-fluid">
+				{% for type in ['danger', 'info', 'success'] %}
+					{% for flash_message in app.session.flashBag.get(type) %}
+						<div class="alert alert-{{ type }}" role="alert">
+							{{ flash_message }}
+						</div>
+					{% endfor %}
+				{% endfor %}
+				{% block body %}{% endblock %}
+			</div>
+		</body>
+	</body>
 </html>
