--- a/templates/client/edit.html.twig
+++ b/templates/client/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Client{% endblock %}
 
 {% block body %}
+	<div class="edit-Container">
     <h1>Edit Client</h1>
     <div class="col-12">
             <p align="right">
@@ -14,4 +15,5 @@
 
 
     {{ include('client/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
