--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -14,7 +14,7 @@
 
     
 
-    <table class="table">
+    <table class="table index-table">
         <thead>
             <tr>
                 <th>Id</th>
@@ -29,11 +29,11 @@
         {% for client in clients %}
             <tr>
                 <td>{{ client.id }}</td>
-                <td>{{ client.mail }}</td>
                 <td>{{ client.ClientName }}</td>
+                <td>{{ client.mail }}</td>
                 <td>{{ client.phone }}</td>
                 <td>{{ client.birthday ? client.birthday|date('Y-m-d') : '' }}</td>
-                <td>
+                <td class="btns-container">
                     <a href="{{ path('app_client_show', {'id': client.id}) }}" button type="button" class="btn btn-primary">show</a>
                     <a href="{{ path('app_client_edit', {'id': client.id}) }}" button type="button" class="btn btn-success">edit</a>
                     <a href="{{ path('app_client_delete', {'id': client.id}) }}"button type="button" class="btn btn-danger"> delete</a>
