--- a/templates/client/show.html.twig
+++ b/templates/client/show.html.twig
@@ -1,38 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Client{% endblock %}
+{% block title %}Client
+{% endblock %}
 
 {% block body %}
-    <h1>Client</h1>
-    <div class="row">
-        <div class="col-12">
-            <p align="right">
-            <a href="{{ path('app_client_index') }}"  class="btn btn-outline-success">back to list</a>
-            </p>
-        </div> 
+	<div class="show-Container">
+		<h1>Client</h1>
+		<div class="row">
+			<div class="col-12">
+				<p align="right">
+					<a href="{{ path('app_client_index') }}" class="btn btn-outline-success">back to list</a>
+				</p>
+			</div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ client.id }}</td>
-            </tr>
-            <tr>
-                <th>ClientName</th>
-                <td>{{ client.ClientName }}</td>
-            </tr>
-            <tr>
-                <th>Phone</th>
-                <td>{{ client.phone }}</td>
-            </tr>
-            <tr>
-                <th>Birthday</th>
-                <td>{{ client.birthday ? client.birthday|date('Y-m-d') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+			<table class="table show-table">
+				<tbody>
+					<tr>
+						<th>Id</th>
+						<td>{{ client.id }}</td>
+					</tr>
+					<tr>
+						<th>ClientName</th>
+						<td>{{ client.ClientName }}</td>
+					</tr>
+					<tr>
+						<th>Phone</th>
+						<td>{{ client.phone }}</td>
+					</tr>
+					<tr>
+						<th>Birthday</th>
+						<td>{{ client.birthday ? client.birthday|date('Y-m-d') : '' }}</td>
+					</tr>
+				</tbody>
+			</table>
+			<div>
+				<a href="{{ path('app_client_edit', {'id': client.id}) }}" button type="button" class="btn btn-success edit-btn-show">edit</a>
 
-    <a href="{{ path('app_client_edit', {'id': client.id}) }}" button type="button" class="btn btn-success">edit</a> 
+				{{ include('client/_delete_form.html.twig') }}
+			</div>
+		</div>
 
-    {{ include('client/_delete_form.html.twig') }}
-{% endblock %}
+	{% endblock %}
