--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,59 +1,64 @@
-
-
 <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css">
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+<title>
+	{% block title %}Welcome!
+	{% endblock %}
+</title>
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+<link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css">
+<link rel="stylesheet" href="public/style.css">
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+{% block stylesheets %}
+	{{ encore_entry_link_tags('app') }}
+{% endblock %}
+
+{% block javascripts %}
+	{{ encore_entry_script_tags('app') }}
+{% endblock %}
 {% block body %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-    <section class="vh-100" style="background-color: #4682B4;">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col col-xl-10">
-        <div class="card" style="border-radius: 1rem;">
-          <div class="row g-0">
-            <div class="col-md-6 col-lg-5 d-none d-md-block">
-              <img src="https://content.api.news/v3/images/bin/992cce44abc69447de8188d0aceadac6"
-                alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
-               </div>
-            <div class="col-md-6 col-lg-7 d-flex align-items-center">
-              <div class="card-body p-4 p-lg-5 text-black">
-                 <form action="{{ path('app_login') }}" method="post">
-                   <div class="d-flex align-items-center mb-3 pb-1">
-                    <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                    <span class="h1 fw-bold mb-0">MyGym</span>
-                  </div>
-                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
-                 <div class="form-outline mb-4">
-                   <label class="form-label" for="form2Example17">Email address</label>
-                   <input type="text" id="username" name="_username"  class="form-control form-control-lg" value="{{ last_username }}"/>
+	{% if error %}
+		<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+	{% endif %}
+	<section class="vh-100" style="background-color: #027382;">
+		<div class="container py-5 h-100">
+			<div class="row d-flex justify-content-center align-items-center h-100">
+				<div class="col col-xl-10">
+					<div class="card" style="border-radius: 1rem;">
+						<div class="row g-0">
+							<div class="col-md-6 col-lg-5 d-none d-md-block">
+								<img style="border-bottom-left-radius:16px; border-top-left-radius:16px; height: 100%; width: 100%; object-fit: cover;" src="https://content.api.news/v3/images/bin/992cce44abc69447de8188d0aceadac6" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;"/>
+							</div>
+							<div class="col-md-6 col-lg-7 d-flex align-items-center">
+								<div class="card-body p-4 p-lg-5 text-black">
+									<form action="{{ path('app_login') }}" method="post">
+										<div style="justify-content: center;" class="d-flex align-items-center mb-3 pb-1">
+											<i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+											<span class="h1 fw-bold mb-0">MyGym</span>
+										</div>
+										<h5 style="text-align:center" class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+										<div class="form-outline mb-4">
+											<label class="form-label" for="form2Example17">Email address</label>
+											<input type="text" id="username" name="_username" class="form-control form-control-lg" value="{{ last_username }}"/>
 
-                   <label class="form-label" for="form2Example27">Password</label>
-                   <input type="password" id="password" name="_password" class="form-control form-control-lg"/>
-                 </div>    
+											<label class="form-label" for="form2Example27">Password</label>
+											<input type="password" id="password" name="_password" class="form-control form-control-lg"/>
+										</div>
 
-            <div class="pt-1 mb-4">
-        
-                    <a href="{{ path('app_client_index') }}">
-                    <button type="submit" class="btn btn-dark btn-lg btn-block">login</button>
-                    </a>
-             </div>
-      </form>  
-    </div>
-    </div>
-    </div>
-    </div>
-      </div>
-    </div>
-  </div>
-</section>
+										<div class="pt-1 mb-4">
+
+											<a href="{{ path('app_client_index') }}">
+												<button style="    text-transform: uppercase;
+													    font-weight: 500;
+													    width: 100%;
+													    background-color: #027382;" type="submit" class="btn btn-dark btn-lg btn-block">login</button>
+											</a>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
