--- a/templates/membership/edit.html.twig
+++ b/templates/membership/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Membership{% endblock %}
 
 {% block body %}
+	<div class="edit-Container">
     <h1>Edit Membership</h1>
     <div class="col-12">
             <p align="right">
@@ -14,4 +15,5 @@
 
 
     {{ include('membership/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
