--- a/templates/membership/index.html.twig
+++ b/templates/membership/index.html.twig
@@ -11,7 +11,7 @@
             </p>
         </div>
 
-    <table class="table">
+    <table class="table index-table">
         <thead>
             <tr>
                 <th>Id</th>
