--- a/templates/membership/show.html.twig
+++ b/templates/membership/show.html.twig
@@ -1,35 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Membership{% endblock %}
+{% block title %}Membership
+{% endblock %}
 
 {% block body %}
-    <h1>Membership</h1>
-    <div class="row">
-        <div class="col-12">
-            <p align="right">
-            <a href="{{ path('app_membership_index') }}"  class="btn btn-outline-success">back to list</a>
-            </p>
-        </div> 
+	<div class="show-Container">
+		<h1>Membership</h1>
+		<div class="row">
+			<div class="col-12">
+				<p align="right">
+					<a href="{{ path('app_membership_index') }}" class="btn btn-outline-success">back to list</a>
+				</p>
+			</div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ membership.id }}</td>
-            </tr>
-            <tr>
-                <th>DateBegin</th>
-                <td>{{ membership.DateBegin ? membership.DateBegin|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>EndDate</th>
-                <td>{{ membership.EndDate ? membership.EndDate|date('Y-m-d') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+			<table class="table show-table">
+				<tbody>
+					<tr>
+						<th>Id</th>
+						<td>{{ membership.id }}</td>
+					</tr>
+					<tr>
+						<th>DateBegin</th>
+						<td>{{ membership.DateBegin ? membership.DateBegin|date('Y-m-d') : '' }}</td>
+					</tr>
+					<tr>
+						<th>EndDate</th>
+						<td>{{ membership.EndDate ? membership.EndDate|date('Y-m-d') : '' }}</td>
+					</tr>
+				</tbody>
+			</table>
 
 
-    <a href="{{ path('app_membership_edit', {'id': membership.id}) }}" button type="button" class="btn btn-success" >edit</a>
+			<div>
+				<a href="{{ path('app_membership_edit', {'id': membership.id}) }}" button type="button" class="btn btn-success edit-btn-show">edit</a>
 
-    {{ include('membership/_delete_form.html.twig') }}
-{% endblock %}
+				{{ include('membership/_delete_form.html.twig') }}
+			</div>
+		</div>
+
+	{% endblock %}
