--- a/templates/planning/edit.html.twig
+++ b/templates/planning/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Planning{% endblock %}
 
 {% block body %}
+	<div class="edit-Container">
     <h1>Edit Planning</h1>
     <div class="col-12">
             <p align="right">
@@ -15,4 +16,5 @@
 
 
     {{ include('planning/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
