--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Planning index{% endblock %}
 
 {% block body %}
-    <h1>our Planning </h1>
+    <h1>Planning </h1>
      <div class="row">
         <div class="col-12">
             <p align="right">
@@ -11,11 +11,11 @@
             </p>
         </div>
 
-    <table class="table">
+    <table class="table index-table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Activity</th>
+                <th>responsible coach</th>
                 <th>RoomNumber</th>
                 <th>BeginHour</th>
                 <th>EndHour</th>
@@ -26,8 +26,8 @@
         <tbody>
         {% for planning in plannings %}
             <tr>
-                <td>{{ planning.id }}</td>
                 <td>{{ planning.activity.ActivityName }}</td>
+                <td>{{ planning.User.UserName }}</td>
                 <td>{{ planning.roomNumber }}</td>
                 <td>{{ planning.BeginHour }}</td>
                 <td>{{ planning.EndHour }}</td>
