--- a/templates/private_coaching/_delete_form.html.twig
+++ b/templates/private_coaching/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_private_coaching_delete', {'id': private_coaching.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form class="deleteForm" method="post" action="{{ path('app_private_coaching_delete', {'id': private_coaching.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ private_coaching.id) }}">
-    <button type="button" class="btn btn-outline-danger">Delete</button>
+    <button type="submit" class="btn btn-outline-danger">Delete</button>
 </form>
