--- a/templates/private_coaching/edit.html.twig
+++ b/templates/private_coaching/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit PrivateCoaching{% endblock %}
 
 {% block body %}
+	<div class="edit-Container">
     <h1>Edit PrivateCoaching</h1>
     <div class="col-12">
             <p align="right">
@@ -14,4 +15,5 @@
 
 
     {{ include('private_coaching/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
