--- a/templates/private_coaching/index.html.twig
+++ b/templates/private_coaching/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}PrivateCoaching index{% endblock %}
 
 {% block body %}
-    <h1>PrivateCoaching index</h1>
+    <h1>Private Coaching</h1>
      <div class="row">
         <div class="col-12">
             <p align="right">
@@ -11,7 +11,7 @@
             </p>
         </div>
 
-    <table class="table">
+    <table class="table index-table">
         <thead>
             <tr>
                 <th>Id</th>
