--- a/templates/private_coaching/show.html.twig
+++ b/templates/private_coaching/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}PrivateCoaching{% endblock %}
 
 {% block body %}
-    <h1>Private Coaching</h1>
+<div class="show-Container"><h1>Private Coaching</h1>
     <div class="col-12">
             <p align="right">
                 <a href="{{ path('app_private_coaching_index') }}" class="btn btn-outline-success">back to list</a>
@@ -11,7 +11,7 @@
         </div>
 
 
-    <table class="table">
+    <table class="table show-table">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -31,7 +31,9 @@
             </tr>
         </tbody>
     </table>
-    <a href="{{ path('app_private_coaching_edit', {'id': private_coaching.id}) }}" button type="button" class="btn btn-success" >edit</a>
+    
+<div><a href="{{ path('app_private_coaching_edit', {'id': private_coaching.id}) }}" button type="button" class="btn btn-success edit-btn-show" >edit</a>
 
-    {{ include('private_coaching/_delete_form.html.twig') }}
+    {{ include('private_coaching/_delete_form.html.twig') }}</div></div>
+    
 {% endblock %}
