--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,16 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Edit User
+{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
-    <div class="col-12">
-            <p align="right">
-                <a href="{{ path('app_user_index') }}" class="btn btn-outline-success">back to list</a>
-            </p>
-        </div>
+	<div class="edit-Container">
+		<h1>Edit User</h1>
+		<div class="col-12">
+			<p align="right">
+				<a href="{{ path('app_user_index') }}" class="btn btn-outline-success">back to list</a>
+			</p>
+		</div>
+		{{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+		{{ include('user/_delete_form.html.twig') }}
+	</div>
 
-
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}   
-    {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
