--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <div class="show-Container"><h1>User</h1>
     <div class="row">
         <div class="col-12">
             <p align="right">
@@ -11,7 +11,7 @@
             </p>
         </div> 
 
-    <table class="table">
+    <table class="table show-table">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -33,7 +33,8 @@
     </table>
   
 
-    <a href="{{ path('app_user_edit', {'id': user.id}) }}" button type="button" class="btn btn-success" >edit</a>
+    <div><a href="{{ path('app_user_edit', {'id': user.id}) }}" button type="button" class="btn btn-success edit-btn-show" >edit</a>
 
-    {{ include('user/_delete_form.html.twig') }}
+    {{ include('user/_delete_form.html.twig') }}</div></div>
+
 {% endblock %}
