--- a/templates/type/index.html.twig
+++ b/templates/type/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}MembershipType {% endblock %}
 
 {% block body %}
-    <h1>Membership Types </h1>
+    <h1>Membership Type </h1>
        <div class="row">
         <div class="col-12">
             <p align="right">
