--- a/templates/type/show.html.twig
+++ b/templates/type/show.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
 
 	<div class="show-Container">
-		<h1>Membership Type</h1>
+		<h1> Type of the Membership </h1>
 		<div class="row">
 			<div class="col-12">
 				<p align="right">
