--- a/templates/client/edit.html.twig
+++ b/templates/client/edit.html.twig
@@ -7,7 +7,7 @@
     <h1>Edit Client</h1>
     <div class="col-12">
             <p align="right">
-                <a href="{{ path('app_client_new') }}" class="btn btn-outline-success">back to list</a>
+                <a href="{{ path('app_client_index') }}" class="btn btn-outline-success">back to list</a>
             </p>
         </div>
 
