--- a/templates/planning/edit.html.twig
+++ b/templates/planning/edit.html.twig
@@ -7,7 +7,7 @@
     <h1>Edit Planning</h1>
     <div class="col-12">
             <p align="right">
-                <a href="{{ path('app_planning_new') }}" class="btn btn-outline-success">back to list</a>
+                <a href="{{ path('app_planning_index') }}" class="btn btn-outline-success">back to list</a>
             </p>
         </div>
 
