--- a/templates/private_coaching/new.html.twig
+++ b/templates/private_coaching/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New PrivateCoaching{% endblock %}
 
 {% block body %}
-    <h1>Create new PrivateCoaching</h1>
+    <h1>Create new session of Private Coaching</h1>
     <div class="col-12">
             <p align="right">
                 <a href="{{ path('app_private_coaching_index') }}" class="btn btn-outline-success">back to list</a>
