--- a/templates/type/edit.html.twig
+++ b/templates/type/edit.html.twig
@@ -8,7 +8,7 @@
 		<h1>Edit Membership Type</h1>
 		<div class="col-12">
 			<p align="right">
-				<a href="{{ path('app_type_new') }}" class="btn btn-outline-success">back to list</a>
+				<a href="{{ path('app_type_index') }}" class="btn btn-outline-success">back to list</a>
 			</p>
 		</div>
 		{{ include('type/_form.html.twig', {'button_label': 'Update'}) }}
