--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -26,9 +26,30 @@
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
             </tr>
             <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
+                <th>User name</th>
+                <td>{{ user.UserName }}</td>
             </tr>
+             <tr>
+                <th>phone </th>
+                <td>{{ user.phone }}</td>
+            </tr>
+             <tr>
+                <th>coach speciality</th>
+                <td>{{ user.speciality }}</td>
+            </tr>
+            <tr>
+                <th>coach salary</th>
+                <td>{{ user.salary }}</td>
+            </tr>
+            <tr>
+                <th>modifie date</th>
+                <td>{{ user.ModfiedAt ? user.ModfiedAt|date('Y-m-d H:i:s') : '' }}</td>
+            </tr>
+            <tr>
+                <th>crate date</th>
+                <td>{{ user.CreatedAt ? user.CreatedAt|date('Y-m-d H:i:s') : '' }}</td>
+            </tr>
+           
         </tbody>
     </table>
   
